--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "@swc/core": "^1.11.4",
     "@types/three": "^0.174.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
