--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/three": "^0.174.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
