--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.0.4",
     "@swc/core": "^1.11.4",
     "@types/three": "^0.174.0",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.174.0",
