--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^10.0.3",
-    "@react-three/fiber": "^9.0.4",
-    "@swc/core": "^1.11.4",
-    "@types/three": "^0.174.0",
-    "gsap": "^3.12.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "three": "^0.174.0",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "@webgpu/types": "^0.1.60",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "r3f-perf": "^7.2.3",
-    "terser": "^5.39.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
-  }
+    "name": "vite-project",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@react-three/cannon": "^6.6.0",
+        "@react-three/drei": "^10.0.3",
+        "@react-three/fiber": "^9.0.4",
+        "@swc/core": "^1.11.4",
+        "@types/three": "^0.174.0",
+        "gsap": "^3.12.7",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "three": "^0.174.0",
+        "zustand": "^5.0.3"
+    },
+    "devDependencies": {
+        "@types/node": "^22.14.1",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "@webgpu/types": "^0.1.60",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "r3f-perf": "^7.2.3",
+        "terser": "^5.39.0",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.2"
+    }
 }
